--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         document.querySelector('button').addEventListener('click', () => {
             n > 10 ? (n = 0) : (ws.send(++n));
 
-            alert(n);
+            // alert(n);
         });
     </script>
 </body>
