--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Websocket tutorial</title>
-    <script src="assets/index.js" defer></script>
+    <script src="assets/src/index.js" defer></script>
 </head>
 
-<body id="app"></body>
+<body>
+    <div id="app"></div>
+</body>
 
 
 </html>
