--- a/pages/play.html
+++ b/pages/play.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Websocket tutorial</title>
-    <script src="assets/src/index.js" defer></script>
+    <title>Play Game!</title>
+    <script src="/assets/src/play.js" defer></script>
 </head>
 
 <body>
     <div id="app"></div>
 </body>
-
 
 </html>
